--- a/main.css
+++ b/main.css
@@ -2,3 +2,24 @@ body{
   background-color: bisque;
   color: darkolivegreen;
 }
+
+.cards {
+  display:flex;
+  flex-direction:row;
+  width:100%;
+  flex-wrap:wrap;
+}
+
+@media (min-width: 48em) {
+  .columns {
+    flex-wrap: nowrap;
+  }
+}
+
+.card {
+ margin: 20px;
+
+}
+.avail {
+  
+}
